--- a/challenge.html
+++ b/challenge.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="static/css/style.css">
 </head>
 <body>
+    <!-- Challenge 1 start -->
     <div class="row">
         <div class="age-title">
             <h2>Challenge 1: Your Age in Days</h2>
@@ -21,6 +22,9 @@
     </div>
         <div id="result" class="age-result"></div>
     </div>
+    <!-- Challenge 1 end -->
+
+    <!-- Challenge 2 Start -->
     <div class="row">
         <div class="dog-title">
             <h2>Challenge 2: Dog Generator</h2>
@@ -30,6 +34,23 @@
             <button id="dog-generator" onclick="generateDod()" type="submit">Generate Dog</button>
         </div>
     </div>
+    <!-- Challenge 2 End -->
+
+
+    <!-- Challenge 3 Start -->
+    <div class="row">
+        <div class="dog-title">
+            <h2>Challenge 3: Rock, Paper, Scissor</h2>
+        </div>
+        <div class="challenge-rsp">
+            <div class="rsp" id="rsp">
+                <img id="rock" src="static/images/kids.jpg" onclick="rpsGame(this)" alt="">
+                <img id="paper" src="static/images/teen.JPG" onclick="rpsGame(this)" alt="">
+                <img id="scissor" src="static/images/married.jpg" onclick="rpsGame(this)" alt="">
+            </div>
+        </div>
+    </div>
+    <!-- Challenge 3 End -->
     <script language="javascript" type="text/javascript" src="static/js/script.js"></script>
 </body>
 </html>
